# wikipath

./: .containerignore  .dockerignore  .editorconfig  .gitignore  Cargo.toml  Containerfile  Dockerfile  LICENSE  README.md  biome.json  build.go  build.rs  cache.go  cache_test.go  database.go  dump.go  go.mod  go.sum  language.go  main.go  parse.go  progress.go  search.go  serve.go
.github/: dependabot.yml
.github/workflows/: build-container-image.yml  build-image.yml  build.yml  ci.yml  docker.yml  golint.yml  jslint.yml  release.yml
src/: build.rs  database.rs  dump.rs  main.rs  memory.rs  misc.rs  parse.rs  progress.rs  search.rs  serve.rs
src/database/: builder.rs  connection.rs  mod.rs
src/dump/: download.rs  mod.rs  parse.rs
web/: .eslintrc.json  biome.json  eslint.config.js  index.html  package-lock.json  package.json  snowpack.config.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts
web/src/: App.jsx  App.scss  App.tsx  api.js  api.ts  index.css  index.html  misc.ts  schema.ts  storage.ts  styles.scss  vite-env.d.ts
web/src/components/: App.tsx  DatabaseSelect.tsx  FindButton.tsx  Form.jsx  Form.module.scss  Form.tsx  Graph.jsx  Graph.tsx  Header.jsx  Language.tsx  LanguageSelect.tsx  PageForm.tsx  PageInputForm.tsx  PageInputLanguage.tsx  PageInputSearch.tsx  PageSearch.tsx  PathsGraph.tsx  ResultGraph.tsx  Search.tsx  SearchInput.tsx  SourceCode.tsx  Suggest.tsx  TextHeader.tsx
web/src/components/generic/: Button.tsx  InputImage.tsx  InputText.tsx  Link.tsx  Select.tsx
web/src/helpers/: api.ts  misc.ts
web/src/styles/: index.css
wp/: Cargo.toml
wp/src/: database.rs  dump.rs  lib.rs  memory.rs  parse.rs  search.rs
