[package]
name = "wikipath"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
clap = { version = "4.5.23", features = ["derive"] }
data-encoding = "2.6.0"
env_logger = "0.11.5"
flate2 = "1.0.35"
heed = "0.21.0"
humantime = "2.1.0"
log = "0.4.22"
notify-debouncer-mini = "0.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["stream"] }
ring = "0.17.8"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "timeout", "set-header"] }
