[package]
name = "wp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
crossbeam-channel = "0.5.13"
data-encoding = "2.6.0"
flate2 = "1.0.31"
hashbrown = "0.14.5"
log = "0.4.22"
redb = "2.1.1"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["stream"] }
ring = "0.17.8"
serde = { version = "1.0.208", features = ["derive"] }
sysinfo = "0.30.13"
